@@ -1,38 +1,0 @@
-/* -*- Mode: C; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- */
-/*
-    Gpredict: Real-time satellite tracking and orbit prediction program
-
-    Copyright (C)  2001-2009  Alexandru Csete, OZ9AEC.
-
-    Authors: Alexandru Csete <oz9aec@gmail.com>
-
-    Comments, questions and bugreports should be submitted via
-    http://sourceforge.net/projects/gpredict/
-    More details can be found at the project home page:
-
-            http://gpredict.oz9aec.net/
- 
-    This program is free software; you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation; either version 2 of the License, or
-    (at your option) any later version.
-  
-    This program is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
-  
-    You should have received a copy of the GNU General Public License
-    along with this program; if not, visit http://www.fsf.org/
-*/
-#ifndef DEFAULTS_H
-#define DEFAULTS_H 1
-
-#warning "**** defaults.h is deprecated. ****"
-
-#define DEFAULT_TIME_FORMAT   "%Y/%m/%d %H:%M:%S"
-
-#define GTK_SAT_MODULE_DEFAULT_TIMEOUT 1000
-#define GTK_SAT_MODULE_DEFAULT_WARP    1
-
-#endif
